--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Created by https://www.toptal.com/developers/gitignore/api/c++,cmake
+# Edit at https://www.toptal.com/developers/gitignore?templates=c++,cmake
+
+### C++ ###
 # Prerequisites
 *.d
 
@@ -30,3 +34,33 @@
 *.exe
 *.out
 *.app
+
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+### CMake Patch ###
+# External projects
+*-prefix/
+
+.vscode/
+
+# Executables
+exercises-w1/cat
+exercises-w1/fib_vector_test
+exercises-w1/random
+exercises-w1/setdiff_test
+exercises-w1/sort3_test
+exercises-w1/namespace
+exercises-w1/cat_file
+
+# End of https://www.toptal.com/developers/gitignore/api/c++,cmake
