Added containers summary

--- a/exercises-w2/CMakeLists.txt
+++ b/exercises-w2/CMakeLists.txt
@@ -108,3 +108,4 @@ add_executable(mc_q2 src/mc/q2.cpp)
 add_executable(mc_q3 src/mc/q3.cpp)
 add_executable(mc_q4 src/mc/q4/main.cpp src/mc/q4/lib1.cpp src/mc/q4/lib2.cpp)
 add_executable(iterators src/random/iterators.cpp)
+add_executable(map_access src/random/map_access.cpp)
