--- a/.gitignore
+++ b/.gitignore
@@ -67,10 +67,12 @@ exercises-w2/mc_q1
 exercises-w2/mc_q2
 exercises-w2/mc_q3
 exercises-w2/mc_q4
+exercises-w2/mc_q5
 exercises-w2/assortment_test
 exercises-w2/mismatch_test
 exercises-w2/mixer_test
 exercises-w2/permutation_test
 exercises-w2/scale_test
+exercises-w2/map_access
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,cmake
